service/tests/models/snapshots/roles/can_create_role_with_description@roles.snap
---
source: tests/models/roles.rs
assertion_line: 69
expression: result
---
Ok(
    Role {
        id: ID,
        pid: PID,
        name: "manager",
        description: Some(
            "Department heads",
        ),
        created_at: DATE,
        updated_at: DATE,
    },
)
