service/tests/models/snapshots/roles/can_find_administrator_role_with_users_by_pid@roles.snap
---
source: tests/models/roles.rs
expression: result
---
Ok(
    RoleWithUsers {
        id: 11,
        pid: 7d416019-34c6-4f25-a39a-fa6752f8b319,
        name: "administrator",
        description: Some(
            "System administrator",
        ),
        users: [
            RoleUser {
                pid: 57456da3-37b0-473e-8f37-0d74547ebf80,
                name: "System Administrator",
                email: "admin@silk.com",
                image: Some(
                    "https://randomuser.me/api/portraits/men/75.jpg",
                ),
            },
        ],
        created_at: 2026-06-21T09:00:00+00:00,
        updated_at: 2026-06-21T09:05:00+00:00,
    },
)
