service/tests/models/snapshots/roles/can_find_role_list_with_empty_users@roles.snap
---
source: tests/models/roles.rs
expression: result
---
Ok(
    [
        RoleWithUsers {
            id: 33,
            pid: a14f47c4-aa29-4e36-a49c-63a72a33b46c,
            name: "manager",
            description: Some(
                "Departmental heads",
            ),
            users: [],
            created_at: 2026-07-14T09:00:00+00:00,
            updated_at: 2026-07-14T09:02:00+00:00,
        },
        RoleWithUsers {
            id: 44,
            pid: 6f3612e1-7c75-403d-8b71-d1c8b4c7eb97,
            name: "support",
            description: Some(
                "Customer support",
            ),
            users: [],
            created_at: 2026-07-14T09:00:00+00:00,
            updated_at: 2026-07-14T09:02:00+00:00,
        },
        RoleWithUsers {
            id: 22,
            pid: f028f910-1a4f-4b79-8619-71a8c185e221,
            name: "customer",
            description: Some(
                "Regular shoppers",
            ),
            users: [],
            created_at: 2026-06-21T09:01:00+00:00,
            updated_at: 2026-06-21T09:02:00+00:00,
        },
        RoleWithUsers {
            id: 11,
            pid: 7d416019-34c6-4f25-a39a-fa6752f8b319,
            name: "administrator",
            description: Some(
                "System administrator",
            ),
            users: [],
            created_at: 2026-06-21T09:00:00+00:00,
            updated_at: 2026-06-21T09:05:00+00:00,
        },
    ],
)
