service/tests/models/snapshots/roles/can_update_role@roles.snap
---
source: tests/models/roles.rs
assertion_line: 153
expression: result
---
Ok(
    Role {
        id: ID,
        pid: PID,
        name: "customer",
        description: Some(
            "Both registered shoppers and guest browsers",
        ),
        created_at: DATE,
        updated_at: DATE,
    },
)
